<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DrApp</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_to_drapp">¡Bienvenido a DrApp!</string>
    <string name="welcome_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="welcome_continue">Continuar</string>
    <string name="api_URL">http://192.168.150.1:9011/api</string>

    <!-- activity_login -->

    <string name="activity_login_title">Inicio de sesión</string>
    <string name="prompt_email_username">Nombre de usuario</string>
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_username">Nombre de usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in_register">Regístrate en DrApp</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="link_lostpassword">¿Ha olvidado su contraseña?</string>
    <string name="link_register">Registrate en DrApp</string>
    <string name="error_invalid_email"> Este dirección de correo es invalido</string>
    <string name="error_invalid_username">Este nombre de usuario es invalido</string>
    <string name="error_invalid_email_username">Nombre de usuario es invalido</string>
    <string name="error_invalid_password">La contrase\u00f1a debe ser de al menos 6 caracteres.</string>
    <string name="error_incorrect_password">La contraseña que has ingresado es incorrecta.</string>
    <string name="credentials_bad">Usuario o contraseña incorrecta.</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="title_activity_register">Registro de usuarios</string>
    <string name="hello_world">Hello world!</string>

    <string name="action_register">Registrarme</string>
    <string name="prompt_firstname">Nombre</string>
    <string name="prompt_lastname">Apellido</string>

    <string-array name="gender_array">
        <item>Seleccione tu genero</item>
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>

</resources>
