<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.WelcomeActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#e5e5e5">

        <ImageView
            android:src="@drawable/ic_launcher"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            android:tint="#7000"
            android:layout_marginTop="16dp"
            android:layout_gravity="center|top"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="116dp"
                android:clipToPadding="false">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#fff"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="2dp"
                    app:cardPreventCornerOverlap="false"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="24dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/welcome_to_drapp"
                            android:fontFamily="sans-serif"
                            android:textSize="20sp"
                            android:textColor="@color/theme_primary"
                            android:textStyle="normal"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/welcome_text"
                            android:layout_marginTop="16dp"
                            android:autoLink="web"
                            android:textColor="@color/body_text_2"
                            android:textSize="14sp" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </FrameLayout>
        </ScrollView>
    </FrameLayout>

    <!--Button bar-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#e5e5e5"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="bottom"
            android:background="@color/theme_primary">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/welcome_continue"
                android:id="@+id/btn_continue"
                android:layout_weight="1"
                android:textColor="#fff"
                android:textAllCaps="true"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:background="?photoItemForeground"
                android:elegantTextHeight="false" />

        </LinearLayout>
    </FrameLayout>


</LinearLayout>
